--- a/src/pages/Stats.module.css
+++ b/src/pages/Stats.module.css
@@ -1,14 +1,15 @@
 .dayTable {
-  padding: 1vw 2vw;
+  padding: 0.3vw 2vw 1vw 2vw;
   table-layout: fixed;
-  width: 78.28vw;
-  margin: 40px auto;
+  margin: 80px auto;
   border: 1px solid rgba(84, 141, 255, 1);
   border-radius: 6px;
 }
+
 tbody td {
   text-align: center;
 }
+
 tbody th,
 tfoot th {
   text-align: left;
@@ -17,19 +18,21 @@ tfoot th {
 tbody tr:nth-child(even) {
   background-color: #ffffff;
 }
+
 tbody tr:nth-child(odd) {
   background-color: #d4e4f5;
-
 }
+
 tbody tr {
   border-bottom: 0.7px solid black;
 }
+
 .tableHeader {
   font-size: 1.3rem;
 }
+
 .chartWrapper {
-  width: 78.28vw;
-  margin: 40px auto;
+  margin: 80px auto;
   border: 1px solid rgba(84, 141, 255, 1);
   border-radius: 6px;
   display: flex;
@@ -40,6 +43,7 @@ tbody tr {
   box-sizing: border-box;
   gap: 1vw;
 }
+
 .chartBlock {
   display: flex;
   flex-direction: row; 
@@ -49,6 +53,7 @@ tbody tr {
   gap: 5vw;
   height: 20vw;  
 }
+
 .chart {
   display: flex;
   align-items: flex-end;
@@ -58,30 +63,44 @@ tbody tr {
   height: 100%;
   background-color: #d4e4f5;
 }
+
 .bar {
   width: 50px;
   background-color: rgba(84, 141, 255, 1);
   border: 0.1px solid black;
   padding: 0;
 }
+
 .chartUnit {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 0.4vw;
 }
+
 .date {
   font-family: 'Nunito-Bold';
   font-size: 0.9rem;
 }
+
 .legend {
   font-family: 'Nunito-Bold';
 }
+
+.legend > tr {
+  height: 35px;
+  text-align: center;
+}
+
 .chartLegend {
   width: 20%;
-
 }
+
 .title {
   text-align: justify;
   font-family: 'Nunito-Bold';
+}
+
+.columnWidth {
+  min-width: 200px;
 }
