--- a/src/components/dictionary/WordsBunch.module.css
+++ b/src/components/dictionary/WordsBunch.module.css
@@ -1,26 +1,111 @@
 .wordBlock {
-  margin: 20px;
-  padding: 30px;
+  margin-top: 40px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   flex-wrap: wrap;
-  gap:4vw;
-  margin-top: 4rem;
-  border-radius: 10px;
-  background-color: antiquewhite;
-}
-.pagination {
-  background-color: antiquewhite;
-  border-radius: 5px;
-  padding: 10px;
-  margin: 0 auto;
-  width: 80vw;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  width: 980px;
+  gap: 40px;
 }
 .pagination a {
   display: block;
   border-bottom: 2px solid transparent;
 }
+.statusTag {
+  display: flex;
+  width: 180px;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  line-height: 21px;
+  height: 33px;
+  font-family: 'Nunito-Regular';
+  color: white;
+  border-radius: 6px;
+  letter-spacing: 0.1em;
+  display: none;
+}
+.showLearned {
+  display: flex;
+  background: #069706;
+}
+.showHard {
+  display: flex;
+  background: rgba(251, 168, 8, 1);
+}
+.catTitle {
+  color: rgba(0, 88, 201, 1);
+  height: 33px;
+  font-family: 'Nunito-Regular';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 33px;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+}
+
+.block {
+  width: 235px;
+}
+
+.positioning {
+  justify-content: space-between;
+}
+.pagination {
+  margin-top: 15px;
+  width: 279px;
+  height: 21px;
+  font-family: 'Nunito-Regular';
+  font-size: 14px;
+  line-height: 21px;
+  color: #000000;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.pagination a {
+  color: #000000;
+  display: block;
+  border-bottom: 2px solid transparent;
+}
+.paginationBottom {
+  margin-top: 35px;
+}
+.userDictionary {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: 0 auto;
+}
+
+.wordBlockHard {
+  margin-top: 0px;
+  margin-bottom: 35px;
+}
+
+.msgWrapper {
+  margin: 80px auto;
+  border: 1px solid rgba(84, 141, 255, 1);
+  border-radius: 6px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1vw 2vw;
+  box-sizing: border-box;
+  gap: 1vw;
+}
+
+.bunchHeader {
+  display: flex;
+  margin: 0 40px;
+  justify-content: space-between;
+  align-items: center;
+  width: 980px;
+}
+
+.bunchHeader div:first-child {
+  width: 235px;
+}
+
