--- a/src/components/members-card/mebersCard.css
+++ b/src/components/members-card/mebersCard.css
@@ -40,7 +40,8 @@
   justify-content: flex-start;
   align-items: flex-start;
   width: 300px;
-  height: 400px;
+  gap: 20px;
+  height: 100%;
   background-color: transparent;
   border: 1px solid #0058C9;
   border-radius: 6px;
@@ -58,13 +59,11 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 230px;
-  overflow:hidden;
   margin-bottom: 20px;
 }
 .member-image{
   width: 100%;
-  height: 100%;
+  height: 300px;
   object-fit: cover;
 }
 .about-member-container{
@@ -76,6 +75,8 @@
   width: 100%;
   text-align: justify;
   margin: 0 auto;
+  align-items: center;
+  padding: 0 10px;
 }
 .member-name{
   width: 165px;
@@ -99,8 +100,7 @@
   text-align: left;
   text-transform: capitalize;
   color: #000000;
-  margin-left: 20.13px;
-  margin-bottom: 24px;
+  margin-top: 50px;
 }
 .logo-container{
   right: 5px;
