--- a/src/components/members-card/mebersCard.css
+++ b/src/components/members-card/mebersCard.css
@@ -70,9 +70,9 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
+  justify-content: space-between;
   width: 100%;
+  height: 200px;
   text-align: justify;
   margin: 0 auto;
   align-items: center;
@@ -97,7 +97,7 @@
   font-weight: 300;
   font-size: 16px;
   line-height: 24px;
-  text-align: left;
+  text-align: center;
   text-transform: capitalize;
   color: #000000;
   margin-top: 50px;
