--- a/src/components/members-card/mebersCard.css
+++ b/src/components/members-card/mebersCard.css
@@ -37,7 +37,7 @@
 .card{
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: flex-start;
   width: 300px;
   gap: 20px;
@@ -59,7 +59,6 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  margin-bottom: 20px;
 }
 .member-image{
   width: 100%;
@@ -72,12 +71,16 @@
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
-  height: 200px;
   text-align: justify;
   margin: 0 auto;
   align-items: center;
   padding: 0 10px;
 }
+.about-member-container > div {
+  height: 50px;
+}
+
+
 .member-name{
   width: 165px;
   height: 33px;
