--- a/src/components/game/sprint-game/sprint-game.module.css
+++ b/src/components/game/sprint-game/sprint-game.module.css
@@ -1,11 +1,5 @@
 .printChallengePage{
   position: relative;
-  /* width: 100vw; */
-  /* height:1080px; */
-  /* background-color: #F5F5F5; */
-  /* width: 100vw; */
-  /* height:1080px; */
-  /* height: 100vh; */
 }
 .printChallengePageContainer{
   display: flex;
@@ -231,12 +225,15 @@ background-color: #C80707;
   width: 100%;
   height: 35px;
   margin: 10px 0 10px 0;
-  border-bottom: 1px solid #0058C9;
   font-size: 1em;
   font-weight: 400;
   text-align: justify;
   color: #000000;;
 }
+.underline {
+  border-bottom: 1px solid #0058C9;
+}
+
 .messageText{
   display: block;
   width: 75%;;
