--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,4 +1,4 @@
-.homePage{
+.homePage {
   position: relative;
   /* height: 100vh; */
   min-height: 1080px;
@@ -7,7 +7,7 @@
   background-position: 50% 50%;
   background-repeat: no-repeat;
 }
-.homePageContainer{
+.homePageContainer {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -17,7 +17,7 @@
   height: 100%;
   margin: 0 auto;
 }
-.homePageTitle{
+.homePageTitle {
   font-style: normal;
   font-weight: 700;
   font-size: 22px;
@@ -27,7 +27,7 @@
   color: #ffffff;
   margin: 134px auto 58px auto;
 }
-.homePageSubtitle{
+.homePageSubtitle {
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
@@ -38,7 +38,7 @@
   margin: 0 auto 16px auto;
   text-align: center;
 }
-.secondPageSubtitle{
+.secondPageSubtitle {
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
@@ -49,7 +49,7 @@
   margin: 0 auto 16px auto;
   text-align: center;
 }
-.homePageAbout{
+.homePageAbout {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -68,25 +68,53 @@
   background-color: #ffffff;
   padding: 16px;
 }
-.homePageAbout:nth-child(2n){
-  margin: 16px auto ;
+.homePageAbout:nth-child(2n) {
+  margin: 16px auto;
 }
 .homePageAbout span {
   width: 100%;
 }
-.articleTitle{
+.articleTitle {
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
   line-height: 33px;
   letter-spacing: 0.1em;
   text-transform: uppercase;
-  color: #548DFF;
+  color: #548dff;
 }
-.homeLink{
+
+.homeLink.titleLink {
   color: white;
 }
-.homeLink:hover{
+
+.homeLink {
+  color: var(--border-color);
+}
+
+.homeLink.titleLink,
+.homeLink {
+  position: relative;
+  transition: color 0.4s ease;
+}
+
+.homeLink.titleLink:hover,
+.homeLink:hover {
   color: #000000;
-  text-decoration: underline;
+}
+
+.homeLink.titleLink::before,
+.homeLink::before {
+  content: '';
+  position: absolute;
+  height: 2px;
+  width: 0%;
+  bottom: 0;
+  left: 0;
+  background-color: var(--border-color);
+  transition: width 0.3s ease;
+}
+.homeLink.titleLink:hover::before,
+.homeLink:hover::before {
+  width: 100%;
 }
