--- a/src/ui/ifFromDictionary/IfFromDictionaryButton.module.css
+++ b/src/ui/ifFromDictionary/IfFromDictionaryButton.module.css
@@ -1,4 +1,5 @@
-.button{
+.button,
+.goToAuth{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13,6 +14,9 @@
   color: #548DFF;
   padding: 0 12px;
   font-weight: 700;
+}
+.goToAuth{
+  height: 35px;
 }
 .button:hover {
   background-color: #548DFF;
