--- a/src/components/game/sprint-game/sprint-game.module.css
+++ b/src/components/game/sprint-game/sprint-game.module.css
@@ -157,6 +157,7 @@ margin: 122px auto 46px auto;
   font-size: 0.75em;
   font-weight: 600;
   color: #F5F5F5;
+  outline-color: var(--main-color);
   /* -webkit-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
   -moz-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
   box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2); */
