--- a/src/components/search/searchBlock.module.css
+++ b/src/components/search/searchBlock.module.css
@@ -35,6 +35,7 @@
   padding: 0 10px;
   border: 1px solid #548DFF;
   border-radius: 6px 0 0 6px;
+  outline-color: var(--main-color);
 }
 .searchContainer {
   display: flex;
