--- a/src/ui/crossButton.module.css
+++ b/src/ui/crossButton.module.css
@@ -7,6 +7,7 @@
   border: 1px solid #548DFF;
   border-radius: 6px;
   background-color: transparent;
+  outline-color: var(--main-color);
 }
 .cross,
 .crossButtonLink {
